=================================================================                                                                      2008-12-09 Released 0.98.4 at svn r6536

2008-12-08 Added mdehoon's native macosx backend from sf patch 2179017 - JDH

2008-12-08 Removed the prints in the set_*style commands.  Return the
           list of pprinted strings instead - JDH

2008-12-08 Some of the changes Michael made to improve the output of
           the property tables in the rest docs broke of made
           difficult to use some of the interactive doc helpers, eg
           setp and getp.  Having all the rest markup in the ipython
           shell also confused the docstrings.  I added a new rc param
           docstring.harcopy, to format the docstrings differently for
           hardcopy and other use.  Ther ArtistInspector could use a
           little refactoring now since there is duplication of effort
           between the rest out put and the non-rest output - JDH

2008-12-08 Updated spectral methods (psd, csd, etc.) to scale one-sided
           densities by a factor of 2 and, optionally, scale all densities
           by the sampling frequency.  This gives better MatLab
           compatibility. -RM

2008-12-08 Fixed alignment of ticks in colorbars. -MGD

2008-12-07 drop the deprecated "new" keyword of np.histogram() for
           numpy 1.2 or later.  -JJL

2008-12-06 Fixed a bug in svg backend that new_figure_manager()
           ignores keywords arguments such as figsize, etc. -JJL

2008-12-05 Fixed a bug that the handlelength of the new legend class
           set too short when numpoints=1 -JJL

2008-12-04 Added support for data with units (e.g. dates) to
           Axes.fill_between. -RM

2008-12-04 Added fancybox keyword to legend. Also applied some changes
           for better look, including baseline adjustment of the
           multiline texts so that it is center aligned. -JJL
