@@ -1,3 +1,6 @@
+2008-12-10 Added Michael's font_manager fix and Jae-Joon's
+           figure/subplot fix.  Bumped version number to 0.98.5 - JDH
+
 =================================================================                                                                      2008-12-09 Released 0.98.4 at svn r6536
 
 2008-12-08 Added mdehoon's native macosx backend from sf patch 2179017 - JDH
